Add YouTube hero

--- a/site/en/posts/io-2022.md
+++ b/site/en/posts/io-2022.md
@@ -7,6 +7,9 @@ tags:
   - success story
   - android studio
   - android
+hero:
+  youtube: p8978007MSQ
+  alt: We recently shared the latest Chrome OS updates at Google I/O 2022.
 theme:
   eyebrow: Google I/O
   icon: ix://posts/io-2022/eyebrow.svg
