Fix small issues in post

--- a/site/en/posts/io-2022.md
+++ b/site/en/posts/io-2022.md
@@ -43,7 +43,7 @@ As technology becomes increasingly intertwined with learning and working, more p
 
 > You can now find tailored developer guidance for building classroom tools and enterprise solutions on ChromeOS.dev.
 
-We also expanded our product suite to give you a stronger, more capable foundation for building everything from note-taking apps to fantasy games. Out of our new devices, the **HP Elite Dragonfly **in particular is a powerhouse for developers. It supports docks, external displays, and styluses — all while running Android Studio faster than ever.
+We also expanded our product suite to give you a stronger, more capable foundation for building everything from note-taking apps to fantasy games. Out of our new devices, the **HP Elite Dragonfly**in particular is a powerhouse for developers. It supports docks, external displays, and styluses — all while running Android Studio faster than ever.
 
 We’ve already got even more exciting devices in the works, including the **Asus CX5.** We’ll be launching more than 75 new Chromebook models this year — so you’ll soon have even more powerful and secure devices to build on and more opportunities to reach a wider audience.
 
@@ -88,7 +88,7 @@ Here’s how a few top brands have built and tailored experiences for Chrome OS:
 - **TikTok:** Published a PWA in Google Play to reach desktop users and optimized its Android app for large-screen devices to make it easier to create and share content
 - **Krita:** Built a desktop-optimized Android app from scratch and tailored the look, feel, and functionality for Chrome OS
 - **Lumafusion**: Has been creating a powerful multi-track video editing experience on Android optimized for large screens and Chrome OS that will launch soon
-- **Webex by Cisco:** Delivered a more delightful and engaging collaboration experience for users on Chrome OS devices with a new Webex Meetings PWA
+- **Webex by Cisco:** Delivered a more delightful and engaging collaboration experience for users on Chrome OS devices with a new [Webex Meetings PWA](https://blog.webex.com/video-conferencing/chromebooks/)
 - **8x8:** Implemented a new WebRTC telephony and analytics solution optimized for Chrome OS and integrated Chrome OS user presence to the 8x8 engine
 
 We’re excited to see how developers have been enhancing their apps and games for Chrome OS users. And we can’t wait to see what you create this year as we continue launching new tools, tips, and technical guidance.
