--- a/site/en/posts/io-2022.md
+++ b/site/en/posts/io-2022.md
@@ -12,11 +12,11 @@ hero:
   alt: We recently shared the latest Chrome OS updates at Google I/O 2022.
 theme:
   eyebrow: Google I/O
-  icon: ix://posts/io-2022/eyebrow.svg
+  icon: ix://posts/io-2022/Chrome_IOBlogpost_Eyebrow_1.svg
   theme: io-2022
   background:
-    top: ix://posts/io-2022/top.svg
-    bottom: ix://posts/io-2022/bottom.svg
+    top: ix://posts/io-2022/ChromeIO_Banner_Desktop_R3.svg
+    bottom: ix://posts/io-2022/ChromeIO_Banner_Mobile_R3.svg
 featured: true
 authors:
   - fahdi
