Migrate to variant

--- a/astro/src/stories/story-hero.mdx
+++ b/astro/src/stories/story-hero.mdx
@@ -30,6 +30,22 @@ export const story = {
             url: '/en',
           },
         },
+        {
+          name: 'theme',
+          type: 'object',
+          default: {
+            theme: 'lumafusion',
+            eyebrow: 'Featured Content',
+          },
+        },
+        {
+          name: 'media',
+          type: 'object',
+          default: {
+            url: 'https://chromeos-dev.imgix.net/posts/announcing-lumafusion-beta-for-chromeos/LumaFusionHero.png?auto=format,compress',
+            alt: 'Chromebook running LumaFusion Beta',
+          },
+        },
       ],
     },
   ],
