--- a/astro/src/stories/story-hero.mdx
+++ b/astro/src/stories/story-hero.mdx
@@ -5,12 +5,64 @@ export const story = {
   component: StoryHero,
   variants: [
     {
+      title: 'Banner (default)',
       props: [
         {
           name: 'eyebrow',
           type: 'text',
           default: 'Featured Story',
           description: 'Small text to describe the kind of content displayed',
+        },
+        {
+          name: 'title',
+          type: 'text',
+          default: 'Announcing LumaFusion beta for ChromeOS',
+        },
+        {
+          name: 'body',
+          type: 'text',
+          default: 'LumaFusion beta is now available for ChromeOS and Android.',
+        },
+        {
+          name: 'cta',
+          type: 'object',
+          default: {
+            text: 'Read More',
+            url: '/en',
+          },
+        },
+        {
+          name: 'theme',
+          type: 'object',
+          default: {
+            theme: 'lumafusion',
+            eyebrow: 'Featured Content',
+          },
+        },
+        {
+          name: 'media',
+          type: 'object',
+          default: {
+            url: 'https://chromeos-dev.imgix.net/posts/announcing-lumafusion-beta-for-chromeos/LumaFusionHero.png?auto=format,compress',
+            alt: 'Chromebook running LumaFusion Beta',
+          },
+        },
+      ],
+    },
+    {
+      title: 'No banner',
+      props: [
+        {
+          name: 'eyebrow',
+          type: 'text',
+          default: 'Featured Story',
+          description: 'Small text to describe the kind of content displayed',
+        },
+        {
+          name: 'banner',
+          type: 'checkbok',
+          default: false,
+          description: 'Whether the component should be displayed as a banner',
         },
         {
           name: 'title',
