--- a/astro/src/stories/story-hero.mdx
+++ b/astro/src/stories/story-hero.mdx
@@ -44,7 +44,7 @@ export const story = {
       ],
     },
     {
-      title: 'No banner, CTA',
+      title: 'Standalone',
       props: [
         {
           name: 'section',
@@ -52,9 +52,9 @@ export const story = {
           default: 'announcement',
         },
         {
-          name: 'banner',
-          type: 'checkbok',
-          default: false,
+          name: 'form',
+          type: 'text',
+          default: 'standalone',
           description: 'Whether the component should be displayed as a banner',
         },
         {
@@ -82,6 +82,99 @@ export const story = {
             icon: 'https://chromeos-dev.imgix.net/icons/eyebrows/announcement.svg?auto=format,compress',
             theme: 'lumafusion',
             eyebrow: 'Featured story',
+          },
+        },
+        {
+          name: 'media',
+          type: 'object',
+          default: {
+            url: 'https://chromeos-dev.imgix.net/posts/announcing-lumafusion-beta-for-chromeos/LumaFusionHero.png?auto=format,compress',
+            alt: 'Chromebook running LumaFusion Beta',
+          },
+        },
+      ],
+    },
+    {
+      title: 'Header',
+      props: [
+        {
+          name: 'section',
+          type: 'text',
+          default: 'announcement',
+        },
+        {
+          name: 'form',
+          type: 'text',
+          default: 'header',
+          description: 'Whether the component should be displayed as a banner',
+        },
+        {
+          name: 'title',
+          type: 'text',
+          default: 'Announcing LumaFusion beta for ChromeOS',
+        },
+        {
+          name: 'body',
+          type: 'text',
+          default: 'LumaFusion beta is now available for ChromeOS and Android.',
+        },
+        {
+          name: 'cta',
+          type: 'object',
+          default: {
+            text: 'Back to News',
+            url: '/en',
+          },
+        },
+        {
+          name: 'theme',
+          type: 'object',
+          default: {
+            icon: 'https://chromeos-dev.imgix.net/icons/eyebrows/announcement.svg?auto=format,compress',
+            theme: 'lumafusion',
+            eyebrow: 'Featured story',
+          },
+        },
+        {
+          name: 'media',
+          type: 'object',
+          default: {
+            url: 'https://chromeos-dev.imgix.net/posts/announcing-lumafusion-beta-for-chromeos/LumaFusionHero.png?auto=format,compress',
+            alt: 'Chromebook running LumaFusion Beta',
+          },
+        },
+      ],
+    },
+    {
+      title: 'Header, no theme',
+      props: [
+        {
+          name: 'section',
+          type: 'text',
+          default: 'announcement',
+        },
+        {
+          name: 'form',
+          type: 'text',
+          default: 'header',
+          description: 'Whether the component should be displayed as a banner',
+        },
+        {
+          name: 'title',
+          type: 'text',
+          default: 'Announcing LumaFusion beta for ChromeOS',
+        },
+        {
+          name: 'body',
+          type: 'text',
+          default: 'LumaFusion beta is now available for ChromeOS and Android.',
+        },
+        {
+          name: 'cta',
+          type: 'object',
+          default: {
+            text: 'Back to News',
+            url: '/en',
           },
         },
         {
