Migrate to updated CQ fork of Svelte
Remove Astro version of StoryHero in favor of Svelte version

--- a/astro/src/stories/story-hero.mdx
+++ b/astro/src/stories/story-hero.mdx
@@ -1,4 +1,4 @@
-import StoryHero from '../components/StoryHero.astro';
+import StoryHero from '../components/StoryHero.svelte';
 
 export const story = {
   title: 'Story Hero',
