--- a/site/en/posts/io-2023.md
+++ b/site/en/posts/io-2023.md
@@ -1,11 +1,11 @@
 ---
-title: 'What’s new in ChromeOS? Explore top developer guidance and highlights from Google I/O 2023'
+title: What’s new in ChromeOS? Explore top developer guidance and highlights from Google I/O 2023
 metadesc: Dive into how you can empower schools, businesses, and everyday users by using the latest ChromeOS tools and devices.
 tags:
   - event
   - product news
   - success story
-  - android studio
+  - pwa
   - android
 hero:
   youtube: eJ5FpTltXZU
@@ -15,12 +15,13 @@ theme:
   icon: ix://posts/io-2022/Chrome_IOBlogpost_Eyebrow_1.svg
   theme: io-2023
   background:
-    top: /images/23Chrome_Blog_IO23_Dektop_BG+Pattern.svg
-    bottom: /images/23Chrome_Blog_IO23_Mobile_BG+Pattern.svg
-featured:
-  images:
-    - image: /images/ab2.png
-      alt: Chromebook running LumaFusion Beta
+    top: ix://posts/io-2023/top-bkg.svg
+    bottom: ix://posts/io-2023/bottom-bkg.svg
+featured: true
+# featured:
+#   images:
+#     - image: /images/ab2.png
+#       alt: Chromebook running LumaFusion Beta
 authors:
   - jeza
   - nataliagvak
@@ -39,21 +40,23 @@ Thanks to our 77 global retail partners, you can test out our newest devices at 
 
 Wondering which device to take for a spin? The [HP Elite Dragonfly Chromebook](https://www.hp.com/us-en/shop/pdp/hp-elite-dragonfly-135-inch-chromebook) and [HP Dragonfly Pro Chromebook](https://www.hp.com/us-en/shop/pdp/hp-dragonfly-pro-chromebook-16gb-wh) are decked out with premium specs, making them ideal for devs who want a powerhouse device that can keep up with heavy coding. If sustainability is on your mind, the [Framework Laptop Chromebook Edition](https://frame.work/laptop-chromebook-12-gen-intel) — the first modular Chromebook — checks that box without compromising on processing power. What’s more is that any Chromebook will pair smoothly with accessories from our [“Works With Chromebook” peripherals program](https://www.google.com/chromebook/workswithchromebook/), ranging from keyboards to drawing tablets.
 
-![Three devices from left to right: the HP Dragonfly Pro Chromebook, HP Elite Dragonfly Chromebook, and Framework Laptop Chromebook Edition](/images/23Chrome_Blog_IO23_Devices.png)
+![Three devices from left to right: the HP Dragonfly Pro Chromebook, HP Elite Dragonfly Chromebook, and Framework Laptop Chromebook Edition](ix://posts/io-2023/devices.png)
 
-Three devices from left to right: the HP Dragonfly Pro Chromebook, HP Elite Dragonfly Chromebook, and Framework Laptop Chromebook Edition
+We also launched the [world’s first laptops built for cloud gaming](https://blog.google/products/chromebooks/gaming-chromebooks/) with Acer, ASUS, and Lenovo: the [Acer Chromebook 516 GE](https://www.bestbuy.com/site/acer-chromebook-516-ge-cloud-gaming-chromebook-16-2560x1600-120hz-intel-core-i5-1240p-8gb-ram-256gb-ssd-rgb-kb-titanium-gray/6516347.p?skuId=6516347)⁠, [ASUS Chromebook Vibe CX55 Flip](https://www.bestbuy.com/site/asus-15-6-touchscreen-cloud-gaming-chromebook-intel-core-i5-1135g7-8gb-memory-256gb-ssd/6512609.p?skuId=6512609)⁠, and the [Lenovo Ideapad Gaming Chromebook⁠](https://www.walmart.com/ip/Lenovo-Ideapad-5i-Gaming-Chromebook-16-0-Intel-Core-i3-1215U-8GB-RAM-128GB-eMMC-Storm-Grey-Chrome-OS-82V80009UX/1867344969). These devices’ 1,600-pixel, 120Hz environments are ideal for exploring intricate, immersive gaming worlds.
 
-![PC and console games from Xbox Cloud Gaming, NVIDIA GeForce NOW, Boosteroid, and Amazon Luna on a Chromebook]()
+Chromebook gamers can stream titles from Xbox Cloud Gaming, NVIDIA GeForce NOW, Boosteroid, and Amazon Luna. The NVIDIA GeForce NOW app even comes preinstalled on gaming Chromebooks. Finding titles to play doesn’t get much easier than that.
 
-Whichever Chromebook you choose will work seamlessly with your Android phone. For instance, you can control phone features directly from your laptop in **Phone Hub **and easily connect to your mobile hotspot with **Instant Tethering**.
+![PC and console games from Xbox Cloud Gaming, NVIDIA GeForce NOW, Boosteroid, and Amazon Luna on a Chromebook](ix://posts/io-2023/pc-console.gif)
 
-We’ve even got a feature in the works for [streaming the apps on your phone](https://support.google.com/chromebook/answer/10480029?hl=en&sjid=14014677587046093240-NA) right to your Chromebook. So even if your phone is out of reach, you’ll be able to respond to messages on apps such as WhatsApp or Signal, keep tabs on a rideshare, and more from your Chromebook — all without setting up a new app on your laptop. You can try this out on the Chromebook beta channel with select Android devices, and the full launch is just around the corner.
+Whichever Chromebook you choose will work seamlessly with your Android phone. For instance, you can control phone features directly from your laptop in [Phone Hub](https://support.google.com/chromebook/answer/10480029?hl=en&sjid=14014677587046093240-NA) and easily connect to your mobile hotspot with Instant Tethering.
+
+We’ve even got a feature in the works for streaming the apps on your phone right to your Chromebook. So, even if your phone is out of reach, you’ll be able to respond to messages on apps such as WhatsApp or Signal, keep tabs on a rideshare, and more from your Chromebook — all without setting up a new app on your laptop. You can try this out on the Chromebook beta channel with select Android devices, and the full launch is just around the corner.
 
 ## Connecting devs to global classrooms, boardrooms, and beyond
 
 We’ve continued supporting schools in all corners of the world. Whether they’re working on science fair projects or debating in virtual classrooms, students and educators rely on Chromebooks to tackle their to-dos.
 
-In 2022, Chromebooks were the No. 1 selling device for schools across the U.S., Sweden, Canada, New Zealand, Japan, Brazil, Indonesia, and Singapore.[^1] By creating engaging educational apps, you can connect with more than 50 million students who are on school-managed Chromebooks. To learn more about developing for schools, check out our education team’s Google I/O 2023 talk.
+In 2022, Chromebooks were the No. 1 selling device for schools across the U.S., Sweden, Canada, New Zealand, Japan, Brazil, Indonesia, and Singapore.[^1] By creating engaging educational apps, you can connect with more than 50 million students who are on school-managed Chromebooks. To learn more about developing for schools, check out our [education team’s Google I/O 2023 talk](https://youtu.be/feAahFti-BA). TKTK LINK
 
 > Chromebooks were the No. 1 selling device for schools in 2022 across eight countries.
 
@@ -67,13 +70,13 @@ For instance, HOTWORX uses these solutions to deliver in-studio workouts all aro
 
 We know a durable device fleet makes a big difference. That’s why we made refreshing old devices easier by widening ChromeOS Flex availability. Take Mercado Libre, for example. The Latin American e-commerce chain used ChromeOS Flex to update its aging PCs across contact centers in 18 countries, increasing contact center productivity by 15% and saving 150 hours of device boot-up time per contact center shift.
 
-All it takes to deploy ChromeOS Flex is a USB drive and a simple three-step installation process. We’ve already seen a 46% growth in activations YOY, which means more businesses than ever are looking for enterprise apps on ChromeOS.[^5] If you’ve got an old laptop lying around, we’d love for you to [try out ChromeOS Flex](https://chromeenterprise.google/os/chromeosflex/) as well. And if you’re curious about what else our enterprise team has been up to, head over to their roundup.
+All it takes to deploy ChromeOS Flex is a USB drive and a simple three-step installation process. We’ve already seen a 46% growth in activations YOY,[^5] which means more businesses than ever are looking for enterprise apps on ChromeOS. If you’ve got an old laptop lying around, we’d love for you to [try out ChromeOS Flex](https://chromeenterprise.google/os/chromeosflex/) as well. And if you’re curious about what else our enterprise team has been up to, [head over to their roundup](/{{locale.code}}/posts/io-2023-enterprise).
 
 ## Building delightful app experiences for Chromebooks
 
 As more people turn to ChromeOS, you can boost discoverability and engagement by creating apps optimized for Chromebooks. The best part? You can build for ChromeOS using app technologies you’re already familiar with: the web and Android.
 
-![A chart of app platforms for building Chromebook-optimized apps. Devs can use the web and Android to build apps and games optimized for Chromebook users.](/images/23Chrome_Blog_IO23_App+Platform.png)
+![A chart of app platforms for building Chromebook-optimized apps. Devs can use the web and Android to build apps and games optimized for Chromebook users.](ix://posts/io-2023/platform.png)
 
 If you’ve got a web app, take it to the next level by [making it installable](https://web.dev/install-criteria/) and enhancing it with modern web capabilities such as offline mode. When people can enjoy your app anytime and anywhere, they’ll turn to it repeatedly — which will then boost results like it did for these app dev teams:
 
@@ -83,12 +86,12 @@ If you’ve got a web app, take it to the next level by [making it installable](
 We also have your back if Android is your app platform of choice. ChromeOS runs a full Android framework, which means Android apps are downloadable and installable from Google Play by default on all consumer devices — increasing reach without requiring any dev lift. To further delight Chromebook users, tailor your apps for larger screens with inspiration from these dev teams:
 
 - [Google Photos](https://play.google.com/store/apps/details?id=com.google.android.apps.photos): Built a [movie editor for Chromebooks](https://blog.google/products/photos/5-tips-for-creating-a-movie-in-google-photos-on-chromebook/) as a large-screen compatible Android app
-- [LumaFusion](https://play.google.com/store/apps/details?id=com.luma_touch.lumafusion): Tailored its award-winning multitrack video editing app for ChromeOS and Android, after which more than 50% of new Android users downloading the app did so on larger screens
+- [LumaFusion](https://play.google.com/store/apps/details?id=com.luma_touch.lumafusion): Tailored its award-winning multitrack video editing app for ChromeOS and Android, after which [more than 50% of new Android users ](chromeos.dev/en/stories/lumafusion)downloading the app did so on larger screens TKTK Case Study
 - [Tayasui Sketches](https://play.google.com/store/apps/details?id=com.tayasui.sketches): Rolled out a [large-screen optimized Android app](/{{locale.code}}/stories/sketches) in just three months using Flutter
 
-Gaming devs can also unleash their creativity on larger screens, as the Minecraft team did in March with the early access launch of [Minecraft: Bedrock Edition on select Chromebooks](https://www.minecraft.net/en-us/article/minecraft-launching-chromebook). The team optimized performance for multiple features, including cross-device play with friends, access to Minecraft Marketplace, and the ability to play on Realms. They’re currently revving up for the full release, so stay tuned.
+Gaming devs can also unleash their creativity on larger screens, as the Minecraft team did in March with the early access launch of ["Minecraft: Bedrock Edition" on select Chromebooks](https://www.minecraft.net/en-us/article/minecraft-launching-chromebook). The team optimized performance for multiple features, including cross-device play with friends, access to Minecraft Marketplace, and the ability to play on Realms. They’re currently revving up for the full release, so stay tuned.
 
-![The early access version Minecraft: Bedrock Edition shown on a Chromebook, with the Minecraft logo to the bottom left.](/images/23Chrome_Blog_IO23_Mincraft.png)
+![The early access version Minecraft: Bedrock Edition shown on a Chromebook, with the Minecraft logo to the bottom left.](ix://posts/io-2023/minecraft.png)
 
 Regardless of where you are in your larger-screen optimization journey, the [large-screen compatibility checklist](https://developer.android.com/docs/quality-guidelines/large-screen-app-quality) is a handy road map. New tools in Android Studio including [updated lint rules](/{{locale.code}}/posts/chromeos-lint-rules-in-android-studio) and the [Desktop Android Virtual Device](/{{locale.code}}/posts/desktop-avd-in-android-studio) make testing and troubleshooting seamless. And now that the Play Console pre-launch report includes desktop device results, it’s easier than ever to test, tweak, and ship your larger-screen optimizations with confidence.
 
@@ -98,7 +101,7 @@ When your apps and games are ready to launch, we make it easy for users to disco
 
 Devs like you are at the heart of ChromeOS. You have the power to touch millions of people’s lives with the apps and games you create, whether they’re at home, work, or school. By building Chromebook-optimized experiences, you can empower users around the world to grow with ChromeOS — and you’ll be able to grow alongside them as well.
 
-So, continue doing what you do best. We’ll stay in your corner, as always. We’re [on Discord](https://discord.com/channels/1009525727504384150/1065730991026602056) ready to chat, so swing by with all your ChromeOS questions. New dev tools and guidance for creating inspiring go-to apps for a global community are in the works too. Stay in the loop by [signing up for our newsletter](/{{locale.code}}/subscribe) — and in the meantime, get more tips and inspiration from ChromeOS.dev and our [Google I/O 2023 talks](https://www.youtube.com/playlist?list=PLNYkxOF6rcICFB5ejR8ezf2pglcfA6H).
+So, continue doing what you do best. We’ll stay in your corner, as always. We’re [on Discord](/{{locale.code}}/posts/join-us-in-the-chromeos-developer-community-on-discord) ready to chat, so swing by with all your ChromeOS questions. New dev tools and guidance for creating inspiring go-to apps for a global community are in the works too. Stay in the loop by [signing up for our newsletter](/{{locale.code}}/subscribe) — and in the meantime, get more tips and inspiration from ChromeOS.dev and our [Google I/O 2023 talks](https://goo.gle/IO23_ChromeOS).
 
 [^1]: Futuresource, 2022.
 [^2]: Google Internal Data, includes unmanaged devices, 2023.
