Editing updates to: I/O 2023 Contact Centers I/O 2023 Enterprise I/O 2023 Games for Large Screens I/O 2023 Kiosk Apps I/O 2023#

--- a/site/en/posts/io-2023.md
+++ b/site/en/posts/io-2023.md
@@ -9,7 +9,7 @@ tags:
   - android
 hero:
   youtube: eJ5FpTltXZU
-  alt: We recently shared the latest Chrome OS updates at Google I/O 2023.
+  alt: We recently shared the latest ChromeOS updates at Google I/O 2023.
 theme:
   eyebrow: Google I/O
   icon: ix://posts/io-2022/Chrome_IOBlogpost_Eyebrow_1.svg
@@ -36,9 +36,9 @@ Here’s the lowdown of what’s new in ChromeOS and how you can make the most o
 
 ## Expanding our powerful product suite around the world
 
-Thanks to our 77 global retail partners, you can test out our newest devices at thousands of stores around the world — regardless of whether you're looking for a reliable Chromebook laptop or an out-of-the-box desktop setup.
+Thanks to our 77 global retail partners, you can test out our newest devices at thousands of stores around the world—regardless of whether you're looking for a reliable Chromebook laptop or an out-of-the-box desktop setup.
 
-Wondering which device to take for a spin? The [HP Elite Dragonfly Chromebook](https://www.hp.com/us-en/shop/pdp/hp-elite-dragonfly-135-inch-chromebook) and [HP Dragonfly Pro Chromebook](https://www.hp.com/us-en/shop/pdp/hp-dragonfly-pro-chromebook-16gb-wh) are decked out with premium specs, making them ideal for devs who want a powerhouse device that can keep up with heavy coding. If sustainability is on your mind, the [Framework Laptop Chromebook Edition](https://frame.work/laptop-chromebook-12-gen-intel) — the first modular Chromebook — checks that box without compromising on processing power. What’s more is that any Chromebook will pair smoothly with accessories from our [“Works With Chromebook” peripherals program](https://www.google.com/chromebook/workswithchromebook/), ranging from keyboards to drawing tablets.
+Wondering which device to take for a spin? The [HP Elite Dragonfly Chromebook](https://www.hp.com/us-en/shop/pdp/hp-elite-dragonfly-135-inch-chromebook) and [HP Dragonfly Pro Chromebook](https://www.hp.com/us-en/shop/pdp/hp-dragonfly-pro-chromebook-16gb-wh) are decked out with premium specs, making them ideal for devs who want a powerhouse device that can keep up with heavy coding. If sustainability is on your mind, the [Framework Laptop Chromebook Edition](https://frame.work/laptop-chromebook-12-gen-intel)—the first modular Chromebook—checks that box without compromising on processing power. What’s more is that any Chromebook will pair smoothly with accessories from our [“Works With Chromebook” peripherals program](https://www.google.com/chromebook/workswithchromebook/), ranging from keyboards to drawing tablets.
 
 ![Three devices from left to right: the HP Dragonfly Pro Chromebook, HP Elite Dragonfly Chromebook, and Framework Laptop Chromebook Edition](ix://posts/io-2023/devices.png)
 
@@ -50,25 +50,25 @@ Chromebook gamers can stream titles from Xbox Cloud Gaming, NVIDIA GeForce NOW, 
 
 Whichever Chromebook you choose will work seamlessly with your Android phone. For instance, you can control phone features directly from your laptop in [Phone Hub](https://support.google.com/chromebook/answer/10480029?hl=en&sjid=14014677587046093240-NA) and easily connect to your mobile hotspot with Instant Tethering.
 
-We’ve even got a feature in the works for streaming the apps on your phone right to your Chromebook. So, even if your phone is out of reach, you’ll be able to respond to messages on apps such as WhatsApp or Signal, keep tabs on a rideshare, and more from your Chromebook — all without setting up a new app on your laptop. You can try this out on the Chromebook beta channel with select Android devices, and the full launch is just around the corner.
+We’ve even got a feature in the works for streaming the apps on your phone right to your Chromebook. So, even if your phone is out of reach, you’ll be able to respond to messages on apps such as WhatsApp or Signal, keep tabs on a rideshare, and more from your Chromebook—all without setting up a new app on your laptop. You can try this out on the Chromebook beta channel with select Android devices, and the full launch is just around the corner.
 
 ## Connecting devs to global classrooms, boardrooms, and beyond
 
 We’ve continued supporting schools in all corners of the world. Whether they’re working on science fair projects or debating in virtual classrooms, students and educators rely on Chromebooks to tackle their to-dos.
 
-In 2022, Chromebooks were the No. 1 selling device for schools across the U.S., Sweden, Canada, New Zealand, Japan, Brazil, Indonesia, and Singapore.[^1] By creating engaging educational apps, you can connect with more than 50 million students who are on school-managed Chromebooks. To learn more about developing for schools, check out our [education team’s Google I/O 2023 talk](https://youtu.be/feAahFti-BA). TKTK LINK
+In 2022, Chromebooks were the No. 1 selling device for schools across the U.S., Sweden, Canada, New Zealand, Japan, Brazil, Indonesia, and Singapore.[^1] By creating engaging educational apps, you can connect with more than 50 million students who are on school-managed Chromebooks. To learn more about developing for schools, check out our [education team’s Google I/O 2023 talk](https://youtu.be/feAahFti-BA).
 
 > Chromebooks were the No. 1 selling device for schools in 2022 across eight countries.
 
 Boardrooms big and small are also turning to ChromeOS. We saw more than 22% growth in active enterprise ChromeOS devices year over year (YOY),[^2] and 13,000 businesses rely on ChromeOS every day to make the most of their investments.[^3] In a recent study, IDC found businesses can reduce three-year cost of operations by 44% and drive an average ROI of 245% over three years by deploying ChromeOS.[^4]
 
-%[(22%, Growth in active enterprise ChromeOS devices YOY), (13K, Businesses rely on ChromeOS), (245%, Average ROI with ChromeOS)]
+%[(22%, Growth in active enterprise ChromeOS devices YOY), (13K, Businesses rely on ChromeOS), (245%, Average 3-year ROI with ChromeOS)]
 
-To help businesses make strategic investments, we expanded [Chrome Enterprise Recommended](https://chromeenterprise.google/recommended/?utm_source=adwords&utm_medium=cpc&utm_campaign=2023-H1-chromebrowser-paidmed-paiddisplay-other-chromebrowserent&utm_term=downloadnow-chrome-browser-enterprise-download&utm_content=GCFW) — our suite of industry solutions. One of our latest additions is a solution track for clinicians we launched with leading partners such as Imprivata OneSign, Practice Fusion, and Athenahealth. Businesses across verticals are also using our digital kiosk and signage solutions to set up menu boards, check-in kiosks, and more.
+To help businesses make strategic investments, we expanded [Chrome Enterprise Recommended](https://chromeenterprise.google/recommended/?utm_source=adwords&utm_medium=cpc&utm_campaign=2023-H1-chromebrowser-paidmed-paiddisplay-other-chromebrowserent&utm_term=downloadnow-chrome-browser-enterprise-download&utm_content=GCFW)—our suite of industry solutions. One of our latest additions is a solution track for clinicians we launched with leading partners such as Imprivata OneSign, Practice Fusion, and Athenahealth. Businesses across many verticals are also using our digital kiosk and signage solutions to set up menu boards, check-in kiosks, and more.
 
-For instance, HOTWORX uses these solutions to deliver in-studio workouts all around the clock. Buffalo Wild Wings also embraces this solution track to manage digital signage across U.S. locations and deliver interactive experiences with more than 2,300 Chromeboxes paired with UPshow’s software.
+For instance, HOTWORX uses these solutions to deliver in-studio workouts all around the clock. Buffalo Wild Wings also embraces this solution track to manage digital signage across U.S. locations, and deliver interactive experiences with more than 2,300 Chromeboxes paired with UPshow’s software.
 
-We know a durable device fleet makes a big difference. That’s why we made refreshing old devices easier by widening ChromeOS Flex availability. Take Mercado Libre, for example. The Latin American e-commerce chain used ChromeOS Flex to update its aging PCs across contact centers in 18 countries, increasing contact center productivity by 15% and saving 150 hours of device boot-up time per contact center shift.
+We know a durable device fleet makes a big difference. That’s why we made refreshing old devices easier by widening ChromeOS Flex availability. Take Mercado Libre, for example. This Latin American e-commerce chain used ChromeOS Flex to update its aging PCs across contact centers in 18 countries, increasing contact center productivity by 15% and saving 150 hours of device boot-up time per contact center shift.
 
 All it takes to deploy ChromeOS Flex is a USB drive and a simple three-step installation process. We’ve already seen a 46% growth in activations YOY,[^5] which means more businesses than ever are looking for enterprise apps on ChromeOS. If you’ve got an old laptop lying around, we’d love for you to [try out ChromeOS Flex](https://chromeenterprise.google/os/chromeosflex/) as well. And if you’re curious about what else our enterprise team has been up to, [head over to their roundup](/{{locale.code}}/posts/io-2023-enterprise).
 
@@ -78,15 +78,15 @@ As more people turn to ChromeOS, you can boost discoverability and engagement by
 
 ![A chart of app platforms for building Chromebook-optimized apps. Devs can use the web and Android to build apps and games optimized for Chromebook users.](ix://posts/io-2023/platform.png)
 
-If you’ve got a web app, take it to the next level by [making it installable](https://web.dev/install-criteria/) and enhancing it with modern web capabilities such as offline mode. When people can enjoy your app anytime and anywhere, they’ll turn to it repeatedly — which will then boost results like it did for these app dev teams:
+If you’ve got a web app, take it to the next level by [making it installable](https://web.dev/install-criteria/) and enhancing it with modern web capabilities such as offline mode. When people can enjoy your app anytime and anywhere, they’ll turn to it repeatedly—which will then boost results like it did for these app dev teams:
 
 - [Codecademy](https://play.google.com/store/apps/details?id=com.ryzac.codecademygo): Created an installable web app for which users were 2X more active and completed 2X the amount of learning content than regular site visitors
 - [Amped Studio](https://play.google.com/store/apps/details?id=com.ampedstudio.app.twa): Experienced 20% growth in registrations and a 100% increase in premium membership sales when it published its web app in the Google Play Store
 
-We also have your back if Android is your app platform of choice. ChromeOS runs a full Android framework, which means Android apps are downloadable and installable from Google Play by default on all consumer devices — increasing reach without requiring any dev lift. To further delight Chromebook users, tailor your apps for larger screens with inspiration from these dev teams:
+We also have your back if Android is your app platform of choice. ChromeOS runs a full Android framework, which means Android apps are downloadable and installable from Google Play by default on all consumer devices—increasing reach without requiring any dev lift. To further delight Chromebook users, tailor your apps for larger screens with inspiration from these dev teams:
 
 - [Google Photos](https://play.google.com/store/apps/details?id=com.google.android.apps.photos): Built a [movie editor for Chromebooks](https://blog.google/products/photos/5-tips-for-creating-a-movie-in-google-photos-on-chromebook/) as a large-screen compatible Android app
-- [LumaFusion](https://play.google.com/store/apps/details?id=com.luma_touch.lumafusion): Tailored its award-winning multitrack video editing app for ChromeOS and Android, after which [more than 50% of new Android users ](chromeos.dev/en/stories/lumafusion)downloading the app did so on larger screens TKTK Case Study
+- [LumaFusion](https://play.google.com/store/apps/details?id=com.luma_touch.lumafusion): Tailored its award-winning multitrack video editing app for ChromeOS and Android, after which [more than 50% of new Android users](chromeos.dev/en/stories/lumafusion) downloading the app did so on larger screens
 - [Tayasui Sketches](https://play.google.com/store/apps/details?id=com.tayasui.sketches): Rolled out a [large-screen optimized Android app](/{{locale.code}}/stories/sketches) in just three months using Flutter
 
 Gaming devs can also unleash their creativity on larger screens, as the Minecraft team did in March with the early access launch of ["Minecraft: Bedrock Edition" on select Chromebooks](https://www.minecraft.net/en-us/article/minecraft-launching-chromebook). The team optimized performance for multiple features, including cross-device play with friends, access to Minecraft Marketplace, and the ability to play on Realms. They’re currently revving up for the full release, so stay tuned.
@@ -99,9 +99,9 @@ When your apps and games are ready to launch, we make it easy for users to disco
 
 ## Take your apps and games further than ever with ChromeOS
 
-Devs like you are at the heart of ChromeOS. You have the power to touch millions of people’s lives with the apps and games you create, whether they’re at home, work, or school. By building Chromebook-optimized experiences, you can empower users around the world to grow with ChromeOS — and you’ll be able to grow alongside them as well.
+Devs like you are at the heart of ChromeOS. You have the power to touch millions of people’s lives with the apps and games you create, whether they’re at home, work, or school. By building Chromebook-optimized experiences, you can empower users around the world to grow with ChromeOS—and you’ll be able to grow alongside them as well.
 
-So, continue doing what you do best. We’ll stay in your corner, as always. We’re [on Discord](/{{locale.code}}/posts/join-us-in-the-chromeos-developer-community-on-discord) ready to chat, so swing by with all your ChromeOS questions. New dev tools and guidance for creating inspiring go-to apps for a global community are in the works too. Stay in the loop by [signing up for our newsletter](/{{locale.code}}/subscribe) — and in the meantime, get more tips and inspiration from ChromeOS.dev and our [Google I/O 2023 talks](https://goo.gle/IO23_ChromeOS).
+So, continue doing what you do best. We’ll stay in your corner, as always. We’re [on Discord](/{{locale.code}}/posts/join-us-in-the-chromeos-developer-community-on-discord) ready to chat, so swing by with all your ChromeOS questions. New dev tools and guidance for creating inspiring go-to apps for a global community are in the works too. Stay in the loop by [signing up for our newsletter](/{{locale.code}}/subscribe)—and in the meantime, get more tips and inspiration from ChromeOS.dev and our [Google I/O 2023 talks](https://goo.gle/IO23_ChromeOS).
 
 [^1]: Futuresource, 2022.
 [^2]: Google Internal Data, includes unmanaged devices, 2023.
