Update alt text

--- a/site/en/posts/io-2023.md
+++ b/site/en/posts/io-2023.md
@@ -21,7 +21,7 @@ featured: true
 # featured:
 #   images:
 #     - image: /images/ab2.png
-#       alt: Chromebook running LumaFusion Beta
+#       alt: The Framework Laptop Chromebook Edition with the Google Photos app on the screen
 authors:
   - jeza
   - nataliagvak
