Add hero image in

--- a/site/en/posts/io-2023.md
+++ b/site/en/posts/io-2023.md
@@ -17,11 +17,10 @@ theme:
   background:
     top: ix://posts/io-2023/top-bkg.svg
     bottom: ix://posts/io-2023/bottom-bkg.svg
-featured: true
-# featured:
-#   images:
-#     - image: /images/ab2.png
-#       alt: The Framework Laptop Chromebook Edition with the Google Photos app on the screen
+featured:
+  images:
+    - image: ix://posts/io-2023/framework.png
+      alt: The Framework Laptop Chromebook Edition with the Google Photos app on the screen
 authors:
   - jeza
   - nataliagvak
