Point to EDU post

--- a/site/en/posts/io-2023.md
+++ b/site/en/posts/io-2023.md
@@ -55,7 +55,7 @@ We’ve even got a feature in the works for [streaming the apps on your phone](h
 
 We’ve continued supporting schools in all corners of the world. Whether they’re working on science fair projects or debating in virtual classrooms, students and educators rely on Chromebooks to tackle their to-dos.
 
-In 2022, Chromebooks were the No. 1 selling device for schools across the U.S., Sweden, Canada, New Zealand, Japan, Brazil, Indonesia, and Singapore.[^1] By creating engaging educational apps, you can connect with more than 50 million students who are on school-managed Chromebooks. To learn more about developing for schools, check out our [education team’s Google I/O 2023 talk](https://youtu.be/feAahFti-BA).
+In 2022, Chromebooks were the No. 1 selling device for schools across the U.S., Sweden, Canada, New Zealand, Japan, Brazil, Indonesia, and Singapore.[^1] By creating engaging educational apps, you can connect with more than 50 million students who are on school-managed Chromebooks. To learn more about developing for schools, check out our [education team’s Google I/O 2023 talk](/{{locale.code}}/posts/io-2023-education).
 
 > Chromebooks were the No. 1 selling device for schools in 2022 across eight countries.
 
