Fix LumaFusion link

--- a/site/en/posts/io-2023.md
+++ b/site/en/posts/io-2023.md
@@ -85,7 +85,7 @@ If you’ve got a web app, take it to the next level by [making it installable](
 We also have your back if Android is your app platform of choice. ChromeOS runs a full Android framework, which means Android apps are downloadable and installable from Google Play by default on all consumer devices—increasing reach without requiring any dev lift. To further delight Chromebook users, tailor your apps for larger screens with inspiration from these dev teams:
 
 - [Google Photos](https://play.google.com/store/apps/details?id=com.google.android.apps.photos): Built a [movie editor for Chromebooks](https://blog.google/products/photos/5-tips-for-creating-a-movie-in-google-photos-on-chromebook/) as a large-screen compatible Android app
-- [LumaFusion](https://play.google.com/store/apps/details?id=com.luma_touch.lumafusion): Tailored its award-winning multitrack video editing app for ChromeOS and Android, after which [more than 50% of new Android users](chromeos.dev/en/stories/lumafusion) downloading the app did so on larger screens, spending 71% more time on tablets and Chromebooks compared to mobile
+- [LumaFusion](https://play.google.com/store/apps/details?id=com.luma_touch.lumafusion): Tailored its award-winning multitrack video editing app for ChromeOS and Android, after which [more than 50% of new Android users](/{{locale.code}}/stories/lumafusion) downloading the app did so on larger screens, spending 71% more time on tablets and Chromebooks compared to mobile
 - [Tayasui Sketches](https://play.google.com/store/apps/details?id=com.tayasui.sketches): Rolled out a [large-screen optimized Android app](/{{locale.code}}/stories/sketches) in just three months using Flutter
 
 Gaming devs can also unleash their creativity on larger screens, as the Minecraft team did in March with the early access launch of ["Minecraft: Bedrock Edition" on select Chromebooks](https://www.minecraft.net/en-us/article/minecraft-launching-chromebook). The team optimized performance for multiple features, including cross-device play with friends, access to Minecraft Marketplace, and the ability to play on Realms. They’re currently revving up for the full release, so stay tuned.
