Content update to I/O post

--- a/site/en/posts/io-2023.md
+++ b/site/en/posts/io-2023.md
@@ -47,7 +47,7 @@ Chromebook gamers can stream titles from Xbox Cloud Gaming, NVIDIA GeForce NOW, 
 
 ![PC and console games from Xbox Cloud Gaming, NVIDIA GeForce NOW, Boosteroid, and Amazon Luna on a Chromebook](ix://posts/io-2023/pc-console.gif)
 
-Whichever Chromebook you choose will work seamlessly with your Android phone. For instance, you can control phone features directly from your laptop in [Phone Hub](https://support.google.com/chromebook/answer/10480029?hl=en&sjid=14014677587046093240-NA) and easily connect to your mobile hotspot with Instant Tethering.
+Whichever Chromebook you choose will work seamlessly with your Android phone. For instance, you can control phone features directly from your laptop in Phone Hub and easily connect to your mobile hotspot with Instant Tethering.
 
 We’ve even got a feature in the works for [streaming the apps on your phone](https://support.google.com/chromebook/answer/10480029?hl=en&sjid=14014677587046093240-NA) right to your Chromebook. So, even if your phone is out of reach, you’ll be able to respond to messages on apps such as WhatsApp or Signal, keep tabs on a rideshare, and more from your Chromebook—all without setting up a new app on your laptop. You can try this out on the Chromebook beta channel with select Android devices, and the full launch is just around the corner.
 
